Fix text align of footer host

--- a/static/footer.css
+++ b/static/footer.css
@@ -14,4 +14,5 @@
 
 .footer .footer-host {
     font-weight: 200;
+    text-align: right;
 }
